--- a/TASK 2.ipynb
+++ b/TASK 2.ipynb
@@ -15,7 +15,7 @@
    "id": "46b2b1d3",
    "metadata": {},
    "source": [
-    "# Author - Arshad Aafaq D"
+    "# Arshad Aafaq D"
    ]
   },
   {
